@@ -1683,7 +1683,7 @@
       <component name="libgnome" dir="libgnome" group="developer-libs">
         <podir dir="po"/>
         <potname name="libgnome-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-2"/>
         <regenerate/>
         <download/>
       </component>
@@ -1694,7 +1694,7 @@
       <component name="libgnomecanvas" dir="libgnomecanvas" group="developer-libs">
         <podir dir="po"/>
         <potname name="libgnomecanvas-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-2"/>
         <regenerate/>
         <download/>
       </component>
@@ -1738,7 +1738,7 @@
       <component name="libgnomeui" dir="libgnomeui" group="developer-libs">
         <podir dir="po"/>
         <potname name="libgnomeui-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-2"/>
         <regenerate/>
         <download/>
       </component>
