@@ -1,3 +1,8 @@
+2003-04-25  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Fixed branch for libgnome,
+	libgnomeui, and libgnomecanvas.
+
 2003-04-23  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added alleyoop.
